<resources>
    <string name="app_name">DoctorX Nabat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="EN">EN</string>
    <string name="FR">FR</string>
    <string name="AR">AR</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pref_lang">lang</string>
    <string name="pref_tutorial">tutorial</string>

    <string name="plants_selection">Crops</string>
    <string name="plants_selection_fr">Cultures</string>
    <string name="plants_selection_ar">المحاصيل</string>
    <string name="supported_diseases">Diseases list</string>
    <string name="supported_diseases_fr">Liste des maladies</string>
    <string name="supported_diseases_ar">قائمة الأمراض</string>
    <string name="symptoms">Symptoms</string>
    <string name="symptoms_fr">Symptômes</string>
    <string name="symptoms_ar">الأعضاء المصابة والأعراض</string>
    <string name="control">Control</string>
    <string name="control_fr">Lutte</string>
    <string name="control_ar">مكافحة</string>
    <string name="conditions_and_geo">Conditions and Geo</string>
    <string name="conditions_and_geo_fr">Conditions et Geo</string>
    <string name="conditions_and_geo_ar">الظروف الملائمة والنطاقات الجغرافية</string>
    <string name="chemical_controls">Chemical Controls:</string>
    <string name="chemical_controls_fr">Lutte chimique:</string>
    <string name="chemical_controls_ar">مكافحة كيميائية:</string>
    <string name="pest_management">Pest Management:</string>
    <string name="pest_management_fr">Lutte intégrée:</string>
    <string name="pest_management_ar">الإدارة المتكاملة للآفات:</string>
    <string name="bio_controls">Bio Controls:</string>
    <string name="bio_controls_fr">Lutte biologique:</string>
    <string name="bio_controls_ar">مكافحة بيولوجية:</string>
    <string name="confidence">Confidence: </string>
    <string name="confidence_fr">Confidence: "</string>
    <string name="confidence_ar">ثقة: </string>
    <string name="take_picture">Take Picture</string>
    <string name="take_picture_fr">Prendre une photo</string>
    <string name="take_picture_ar">التقط صورة</string>
    <string name="pick_image">Pick Image</string>
    <string name="pick_image_fr">Choisir une image</string>
    <string name="pick_image_ar">اختر صورة</string>
    <string name="show_tutorial">Show Tutorial</string>
    <string name="show_tutorial_fr">Afficher les instructions</string>
    <string name="show_tutorial_ar">إظهار التعليمات</string>
    <string name="cumcumber_img_desc">Cucumber Image</string>
    <string name="tomatoe_img_desc">Tomatoes Image</string>
    <string name="pepper_img_desc">Pepper Image</string>
    <string name="take_picture_cucumber">Take a picture of a cucumber plant</string>
    <string name="take_picture_tomatoe">Take a picture of a tomatoe plant</string>
    <string name="take_picture_pepper">Take a picture of a pepper plant</string>
    <string name="pick_picture_cucumber">Load an image of cucumber plant</string>
    <string name="pick_picture_tomatoe">Load an image of tomatoe plant</string>
    <string name="pick_picture_pepper">Load an image of peppers plant</string>
</resources>